[gd_scene load_steps=5 format=3 uid="uid://c2ru1q5gvx8uw"]

[ext_resource type="Script" path="res://Scenes/Options Panel.gd" id="1_fywyd"]
[ext_resource type="FontFile" path="res://Fonts/font1.tres" id="2_kdnir"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j3bsf"]
bg_color = Color(0.105882, 0.176471, 0.243137, 1)

[sub_resource type="LabelSettings" id="LabelSettings_68r41"]
font_size = 34

[node name="Options Panel" type="Panel"]
offset_left = 330.0
offset_top = 124.0
offset_right = 810.0
offset_bottom = 560.0
theme_override_styles/panel = SubResource("StyleBoxFlat_j3bsf")
script = ExtResource("1_fywyd")

[node name="Options Title Text" type="Label" parent="."]
layout_mode = 0
offset_left = 125.0
offset_top = 4.0
offset_right = 362.0
offset_bottom = 70.0
text = "Options"
label_settings = SubResource("LabelSettings_68r41")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Master Volume Slider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 124.0
offset_right = 424.0
offset_bottom = 174.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="Label" type="Label" parent="Master Volume Slider"]
layout_mode = 0
offset_left = 1.0
offset_top = -13.0
offset_right = 119.0
offset_bottom = 10.0
text = "Master Volume"

[node name="Music Volume Slider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 203.0
offset_right = 425.0
offset_bottom = 253.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="Label" type="Label" parent="Music Volume Slider"]
layout_mode = 0
offset_left = 1.0
offset_top = -13.0
offset_right = 119.0
offset_bottom = 10.0
text = "Music Volume"

[node name="SFX Volume Slider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 283.0
offset_right = 425.0
offset_bottom = 333.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="Label" type="Label" parent="SFX Volume Slider"]
layout_mode = 0
offset_left = 1.0
offset_top = -13.0
offset_right = 119.0
offset_bottom = 10.0
text = "SFX Volume"

[node name="Close Button" type="Button" parent="."]
layout_mode = 0
offset_left = 138.0
offset_top = 367.0
offset_right = 332.0
offset_bottom = 409.0
theme_override_fonts/font = ExtResource("2_kdnir")
text = "Exit"

[connection signal="drag_ended" from="Master Volume Slider" to="." method="_on_slider_drag_ended"]
[connection signal="value_changed" from="Master Volume Slider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="drag_ended" from="Music Volume Slider" to="." method="_on_slider_drag_ended"]
[connection signal="value_changed" from="Music Volume Slider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="drag_ended" from="SFX Volume Slider" to="." method="_on_slider_drag_ended"]
[connection signal="value_changed" from="SFX Volume Slider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="pressed" from="Close Button" to="." method="_on_close_button_pressed"]
